fix system tray background in dark mode
fix user select all app

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
 @layer base {
   body {
     @apply dark:text-gray-300;
+    user-select: none;
   }
 
   /* 滚动槽 */
